# Robot-Utilities

./: CMakeLists.txt  README.md  main.cpp
Engines/Headers/: CentralEngine.h  LIDAREngine.h  MovementEngine.h
Engines/Implementations/: CentralEngine.cpp  LIDAREngine.cpp  MovementEngine.cpp
Utilities/Headers/: DSAdapter.h  DynamicArray.h  Exceptions.h  LIDARCloud.h  LIDARColumn.h  LIDARPoint.h  LaplaceExpander.h  MathLibAuxiliaryFunctions.h  Matrix.h  Vector.h
Utilities/Implementations/: DSAdapter.cpp  LIDARCloud.cpp  LIDARColumn.cpp  LIDARPoint.cpp  LaplaceExpander.cpp  MathLibAuxiliaryFunctions.cpp  Matrix.cpp  Vector.cpp
configs/: ChassisProperties.json  CloudConfigs.json  LIDAREngineConfigs.json  MovementEngineConfigs.json  cloudConfigs.json
